--- a/Lucuber/Views/Formula/DetailCell/FormulaCell.xib
+++ b/Lucuber/Views/Formula/DetailCell/FormulaCell.xib
@@ -7,43 +7,53 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FormulaCell" id="gTV-IL-0wX" customClass="FormulaCell" customModule="Lucuber" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="272" height="43"/>
+            <rect key="frame" x="0.0" y="0.0" width="334" height="52"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="272" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="334" height="52"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Oval5" translatesAutoresizingMaskIntoConstraints="NO" id="xfs-PD-VsR" userLabel="Icon Image View">
-                        <rect key="frame" x="38" y="10" width="20" height="20"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="20" id="CQA-fs-8EX"/>
-                            <constraint firstAttribute="width" constant="20" id="mE1-S0-Tqs"/>
-                        </constraints>
-                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wcc-KF-Z00" userLabel="Name Label">
-                        <rect key="frame" x="73" y="12" width="46" height="18"/>
+                        <rect key="frame" x="106" y="13" width="46" height="18"/>
                         <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="15"/>
                         <color key="textColor" white="0.5" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="OLL1" translatesAutoresizingMaskIntoConstraints="NO" id="vPf-d4-jY4" userLabel="Icon Image View">
+                        <rect key="frame" x="38" y="10" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="2KS-mL-AEf"/>
+                            <constraint firstAttribute="width" constant="30" id="ojD-TD-V3b"/>
+                        </constraints>
+                    </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="180du" translatesAutoresizingMaskIntoConstraints="NO" id="xfs-PD-VsR" userLabel="Icon Image View">
+                        <rect key="frame" x="72" y="15" width="20" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="AQj-yd-fQq"/>
+                            <constraint firstAttribute="width" constant="20" id="vA6-tN-ixT"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
             <constraints>
-                <constraint firstItem="Wcc-KF-Z00" firstAttribute="leading" secondItem="xfs-PD-VsR" secondAttribute="trailing" constant="15" id="EGP-Zy-bDM"/>
-                <constraint firstItem="xfs-PD-VsR" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="N0H-Eu-4zW"/>
-                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Wcc-KF-Z00" secondAttribute="trailing" constant="38" id="TDl-DH-xQg"/>
-                <constraint firstItem="xfs-PD-VsR" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="38" id="i0f-Uu-hjX"/>
-                <constraint firstItem="Wcc-KF-Z00" firstAttribute="top" secondItem="xfs-PD-VsR" secondAttribute="top" constant="2" id="m7A-9C-wK2"/>
+                <constraint firstItem="xfs-PD-VsR" firstAttribute="leading" secondItem="vPf-d4-jY4" secondAttribute="trailing" constant="4" id="B69-Vh-Na3"/>
+                <constraint firstItem="Wcc-KF-Z00" firstAttribute="top" secondItem="vPf-d4-jY4" secondAttribute="top" constant="3" id="HA2-UC-Tud"/>
+                <constraint firstItem="xfs-PD-VsR" firstAttribute="centerY" secondItem="vPf-d4-jY4" secondAttribute="centerY" id="bHh-jf-rsN"/>
+                <constraint firstItem="vPf-d4-jY4" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="bkJ-W9-3CN"/>
+                <constraint firstItem="Wcc-KF-Z00" firstAttribute="leading" secondItem="xfs-PD-VsR" secondAttribute="trailing" constant="14" id="e0a-65-Qo4"/>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Wcc-KF-Z00" secondAttribute="trailing" constant="38" id="jGF-kh-LkX"/>
+                <constraint firstItem="vPf-d4-jY4" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="38" id="sBk-R3-8kF"/>
             </constraints>
-            <size key="customSize" width="272" height="43"/>
+            <size key="customSize" width="334" height="52"/>
             <connections>
                 <outlet property="formulaLabel" destination="Wcc-KF-Z00" id="UwP-UJ-mde"/>
                 <outlet property="indicaterImageView" destination="xfs-PD-VsR" id="hwV-38-XO6"/>
             </connections>
-            <point key="canvasLocation" x="362" y="302.5"/>
+            <point key="canvasLocation" x="559" y="356"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="Oval5" width="38" height="38"/>
+        <image name="180du" width="60" height="50"/>
+        <image name="OLL1" width="600" height="600"/>
     </resources>
 </document>
