--- a/Lucuber/Resgin.storyboard
+++ b/Lucuber/Resgin.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="6fl-js-9hU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11129.15" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" generatesPrototypingConstraints="YES" useTraitCollections="YES" colorMatched="NO" initialViewController="6fl-js-9hU">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <development version="7000" identifier="xcode"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11103.10"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -19,12 +20,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y3h-WK-ECm" userLabel="Login Button" customClass="EdgeBorderButton" customModule="Lucuber" customModuleProvider="target">
-                                <rect key="frame" x="188" y="607" width="187" height="60"/>
+                                <rect key="frame" x="187" y="607" width="188" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="jCy-Z6-cMS"/>
                                 </constraints>
                                 <state key="normal" title="登录">
-                                    <color key="titleColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
+                                    <color key="titleColor" red="0.28958413004875183" green="0.31462949514389038" blue="0.32950475811958313" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xwJ-K5-VAo" userLabel="Register Button">
@@ -34,14 +35,14 @@
                                     <constraint firstAttribute="height" constant="60" id="G7T-1b-IaF"/>
                                 </constraints>
                                 <state key="normal" title="注册">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
                                     <segue destination="Myv-AC-gMz" kind="show" id="qCI-lc-6fX"/>
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch" translatesAutoresizingMaskIntoConstraints="NO" id="zJc-6x-vWp">
-                                <rect key="frame" x="0.0" y="110" width="375" height="281"/>
+                                <rect key="frame" x="0.0" y="110" width="375" height="282"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="300" id="TqJ-oI-i6q"/>
                                     <constraint firstAttribute="height" constant="180" id="WMX-rx-M0P"/>
@@ -65,7 +66,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="人生要像魔方一样五彩缤纷。" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jz7-Y9-eBh">
-                                <rect key="frame" x="78" y="534" width="221" height="21"/>
+                                <rect key="frame" x="75" y="534" width="226" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -115,7 +116,6 @@
                     </view>
                     <navigationItem key="navigationItem" id="2Lr-Qk-W2Q"/>
                     <nil key="simulatedTopBarMetrics"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bUJ-5Y-0g9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -151,7 +151,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="p8j-kr-P0T" firstAttribute="width" secondItem="qJM-48-Agq" secondAttribute="width" id="0pJ-6o-549"/>
                             <constraint firstItem="p8j-kr-P0T" firstAttribute="height" secondItem="qJM-48-Agq" secondAttribute="height" id="4pX-s5-g42"/>
@@ -165,7 +165,6 @@
                         </constraints>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="nameTextField" destination="qJM-48-Agq" id="A2c-Jl-v3u"/>
                         <segue destination="jbj-lb-FI4" kind="show" identifier="ShowRegisterPickMobile" id="AOg-k4-MYi"/>
@@ -224,7 +223,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="Laf-6e-wdp" firstAttribute="top" secondItem="XY4-TT-yWd" secondAttribute="bottom" constant="60" id="MBN-wj-AL9"/>
                             <constraint firstAttribute="trailing" secondItem="7ZS-bh-Qbf" secondAttribute="trailing" id="Sjl-3T-aTk"/>
@@ -251,7 +250,6 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6fl-js-9hU" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Uoq-ef-j8l">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
