--- a/Lucuber/Base.lproj/Main.storyboard
+++ b/Lucuber/Base.lproj/Main.storyboard
@@ -59,6 +59,34 @@
             </objects>
             <point key="canvasLocation" x="-416" y="1965"/>
         </scene>
+        <!--Type Menu View Controller-->
+        <scene sceneID="fqy-0W-UdX">
+            <objects>
+                <viewController storyboardIdentifier="TypeMenuViewController" id="p8f-Ek-2y3" customClass="TypeMenuViewController" customModule="Lucuber" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gNm-aY-4HZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="vky-oR-PV5"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="h2W-w2-wOP">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="popover" translatesAutoresizingMaskIntoConstraints="NO" id="DEO-4x-Y29">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="DEO-4x-Y29" secondAttribute="trailing" id="Fwl-zH-zcc"/>
+                            <constraint firstItem="vky-oR-PV5" firstAttribute="top" secondItem="DEO-4x-Y29" secondAttribute="bottom" id="Gyh-KA-X7S"/>
+                            <constraint firstItem="DEO-4x-Y29" firstAttribute="leading" secondItem="h2W-w2-wOP" secondAttribute="leading" id="npo-58-WSy"/>
+                            <constraint firstItem="DEO-4x-Y29" firstAttribute="top" secondItem="h2W-w2-wOP" secondAttribute="top" id="zFR-SV-wAm"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JvI-ze-rhP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="288" y="1984"/>
+        </scene>
         <!--Show Formula Detail Controller-->
         <scene sceneID="dTe-lT-qeQ">
             <objects>
@@ -238,6 +266,7 @@
     </scenes>
     <resources>
         <image name="plus" width="44" height="44"/>
+        <image name="popover" width="340" height="133"/>
         <image name="qeihuan" width="44" height="44"/>
         <image name="tabbar_gongshi" width="30" height="30"/>
         <image name="tabbar_gongshi_sele" width="30" height="30"/>
