--- a/Lucuber/Base.lproj/Main.storyboard
+++ b/Lucuber/Base.lproj/Main.storyboard
@@ -31,6 +31,9 @@
                                         <exclude reference="yYX-Ze-mpy"/>
                                     </mask>
                                 </variation>
+                                <connections>
+                                    <segue destination="Xf5-yO-QLn" kind="presentation" identifier="ShowAddFormulaSegue" id="lal-RT-l3l"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -75,7 +78,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JvI-ze-rhP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="288" y="1984"/>
+            <point key="canvasLocation" x="-1112" y="1965"/>
         </scene>
         <!--Show Formula Detail Controller-->
         <scene sceneID="dTe-lT-qeQ">
@@ -252,6 +255,31 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pvf-pA-hnW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-416" y="1251"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="UF3-hD-5cv">
+            <objects>
+                <viewController id="Wez-Kn-fUq" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="fmV-Pf-MnM"/>
+                        <viewControllerLayoutGuide type="bottom" id="d27-nb-RoS"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="FFg-Rk-P1M">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Mqd-63-3ZC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+        </scene>
+        <!--AddFormula-->
+        <scene sceneID="FPW-1k-1Kr">
+            <objects>
+                <viewControllerPlaceholder storyboardName="AddFormula" id="Xf5-yO-QLn" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="i6a-Cr-uYS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="280" y="1965"/>
         </scene>
     </scenes>
     <resources>
